--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - 3000:3000
     env_file:
       - .env
+    networks:
+      - my-network
     depends_on:
       - database
 
@@ -20,6 +22,8 @@ services:
       - 5432:5432
     env_file:
       - .env
+    networks:
+      - my-network
     volumes:
       - ./db-data/:/var/lib/postgresql/data/
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
