--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   "homepage": "https://github.com/TooBunReal/QTM_provjp#readme",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cookie-session": "^2.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
+    "express-session": "^1.17.3",
     "pg": "^8.11.3",
     "pg-promise": "^11.5.4"
   }
